@@ -62,6 +62,11 @@ Release date to be decided, codename to be chosen.
 - Removed werkzeug.templates and werkzeug.contrib.kickstart.
 - Changed host lookup logic for forwarded hosts to allow lists of
   hosts in which case only the first one is picked up.
+- Added `wsgi.get_query_string`, `wsgi.get_path_info` and
+  `wsgi.get_script_name` and made the `wsgi.pop_path_info` and
+  `wsgi.peek_path_info` functions perform unicode decoding.  This
+  was necessary to avoid having to expose the WSGI encoding dance
+  on Python 3.
 
 Version 0.8.4
 -------------
